--- a/src/client/components/Logo/style.css
+++ b/src/client/components/Logo/style.css
@@ -1,5 +1,12 @@
+.logo-button {
+  background: none;
+  border: none;
+  outline: none;
+  cursor: pointer;
+}
+
 .logo {
+  font-size: 2rem;
   text-align: left;
-  padding-left: 1rem;
   color: aquamarine;
 }
