add edit button styles

--- a/src/client/components/Button/style.css
+++ b/src/client/components/Button/style.css
@@ -7,3 +7,10 @@
   height: 4rem;
   background-color: #cccccc;
 }
+
+.back {
+  background-color: transparent;
+  border: none;
+  position: absolute;
+  left: 10%;
+}
